# iqx-be

./: .gitignore  Dockerfile  README.MD  alembic.ini  docker-compose.yml  env.example  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 21fe6fecd971_create_companies_table.py  2662059b1877_add_organ_name_to_companies.py  f4444f5dfbe4_create_users_table.py
app/: main.py
app/api/v1/: deps.py
app/api/v1/endpoints/: auth.py  companies.py  users.py
app/core/: config.py  notifications.py  security.py
app/crud/: __init__.py  crud_company.py  crud_user.py
app/db/: session.py
app/models/: company.py  user.py
app/schemas/: __init__.py  company.py  token.py  user.py
tests/: test_main.py
